# AID-Docs

./: .gitignore  CLAUDE.md  README.md  greenfield.md
examples/: collections-hashmap.aid  events-emitter.aid  (+3 more)
tools/aid-bench/: pyproject.toml  run_ledger.py  run_local.py
tools/aid-bench/results/: BM1-results.md  BM2-L2-comparison.md  BM2-results.md  BM3-results.md  BM4-redo-results.md  BM4-results.md  L2-pipeline-results.md
tools/aid-bench/src/aid_bench/: __init__.py  cli.py  conditions.py  evaluator.py  report.py  runner.py
tools/aid-bench/tasks/csv/: docs.md  library.aid  library_l1.aid  signatures.md  tasks.py
tools/aid-bench/tasks/ledger/: docs.md  ledger.py  library.aid  library_l1.aid  signatures.md  tasks.py
tools/aid-bench/tasks/sqlite3/: docs.md  library.aid  library_l1.aid  signatures.md  tasks.py
tools/aid-bench/tasks/tarfile/: docs.md  library.aid  library_l1.aid  signatures.md  tasks.py
tools/aid-bench/tests/: test_conditions.py  test_evaluator.py
tools/aid-gen/: pyproject.toml
tools/aid-gen/src/aid_gen/: __init__.py  cli.py  emitter.py  extractor.py  model.py
tools/aid-gen/src/aid_gen/python/: __init__.py  parser.py  protocols.py  types.py
tools/aid-gen/tests/: test_cli.py  test_edge_cases.py  test_emitter.py  test_extractor.py  test_parser.py  test_protocols.py  test_types.py
tools/aid-gen/tests/fixtures/: async_module.py  classes.py  edge_cases.py  protocols_mod.py  simple_module.py
tools/aidkit-py/: pyproject.toml
tools/aidkit-py/src/aidkit/: discovery.py  emitter.py  model.py  parser.py  validator.py
tools/aidkit-py/src/aidkit/cli/: discover.py  gen_l2.py  manifest_gen.py  parse.py  validate.py
tools/aidkit-py/src/aidkit/l2/: __init__.py  diff.py  generator.py  incremental.py  reviewer.py  staleness.py
tools/aidkit-py/tests/: test_emitter.py  test_l2.py  test_parser.py  test_validator.py
(+96 files in other folders)
